# pocketcoder-a1

./: .gitignore  LICENSE  README.md  pyproject.toml
a1/: __init__.py  checkpoint.py  cli.py  config.py  dashboard.py  loop.py  tasks.py  validator.py
a1/tester/: __init__.py  analyzer.py  browser.py  report.py  runner.py  scenarios.py
